--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="qr-code">
             <p>扫描二维码捐赠支持数字图书馆建设：</p>
-            <img src="二维码图片链接" alt="捐赠二维码">
+            <img src="/Alipay.jpg" alt="捐赠二维码">
         </div>
 
         <a href="支付宝捐赠链接" class="donate-btn">立即捐赠</a>
