--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <img src="/Alipay.jpg" alt="捐赠二维码">
         </div>
 
-        <a href="支付宝捐赠链接" class="donate-btn">立即捐赠</a>
+        <a href="https://qr.alipay.com/fkx11948bmteocx1ugg6280" class="donate-btn">立即捐赠</a>
     </section>
 
     <footer>
