--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
 <!--ico图标-->
- <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="https://bingbook.cn//ico/favicon16x16.ico">
+ <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="https://bingbook.cn/ico/favicon16x16.ico">
  <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="https://bingbook.cn/ico/favicon32x32.ico">
  <link rel="shortcut icon" type="image/x-icon" sizes="48x48" href="https://bingbook.cn/ico/favicon48x48.ico">
  <link rel="shortcut icon" type="image/x-icon" sizes="64x64" href="https://bingbook.cn/ico/favicon64x64.ico">
