--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  
-<!--ico图标-->
- <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="https://bingbook.cn/ico/favicon16x16.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="https://bingbook.cn/ico/favicon32x32.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="48x48" href="https://bingbook.cn/ico/favicon48x48.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="64x64" href="https://bingbook.cn/ico/favicon64x64.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="128x128" href="https://bingbook.cn/ico/favicon128x128.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="256x256" href="https://bingbook.cn/ico/favicon256x256.ico">
- <link rel="shortcut icon" type="image/x-icon" sizes="512x512" href="https://bingbook.cn/ico/favicon512x512.ico">
-        
-    <meta charset="UTF-8">
+    <!-- Preconnect to Google Fonts -->
+    <link rel="preconnect" href="https://bingbook.cn">
+    <link rel="preconnect" href="bingbook.cn" crossorigin>
+    <link href="https://bingbook.cn/fonts/Lexendswap" rel="stylesheet">
+
+    <!--ico图标-->
+  <link rel="shortcut icon" type="image/x-icon" sizes="16x16" href="https://bingbook.cn/ico/favicon16x16.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="32x32" href="https://bingbook.cn/ico/favicon32x32.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="48x48" href="https://bingbook.cn/ico/favicon48x48.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="64x64" href="https://bingbook.cn/ico/favicon64x64.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="128x128" href="https://bingbook.cn/ico/favicon128x128.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="256x256" href="https://bingbook.cn/ico/favicon256x256.ico">
+  <link rel="shortcut icon" type="image/x-icon" sizes="512x512" href="https://bingbook.cn/ico/favicon512x512.ico">
+ 
+  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="支持冰书公益活动，通过数字图书馆建设，帮助乡村地区消除数字鸿沟，鼓励阅读习惯。">
     <title>冰书公益 – "一村一个数字图书馆”</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Lexend';
             margin: 0;
             padding: 0;
             background-color: #f7f7f7;
@@ -30,7 +35,7 @@
             padding: 20px 0;
         }
 
-        section {
+        main {
             padding: 40px 20px;
             max-width: 800px;
             margin: 0 auto;
@@ -94,7 +99,7 @@
         <h1>支持“一村一个数字图书馆”公益活动</h1>
     </header>
 
-    <section>
+    <main>
         <h2>关于活动</h2>
         <p>“一村一个数字图书馆”是由冰书（bingbook.cn）发起的公益活动，旨在帮助乡村地区消除数字鸿沟，鼓励大家养成阅读好书的习惯。通过数字图书馆的建设，我们希望每个村庄都能拥有丰富的书籍资源，让更多人享受阅读带来的知识与乐趣。</p>
         
@@ -106,15 +111,14 @@
             <img src="/Alipay.jpg" alt="捐赠二维码">
         </div>
 
-        <a href="https://qr.alipay.com/tsx12849bgl0ikyxzl84jed" class="donate-btn">立即捐赠</a>
-    </section>
+        <a href="https://qr.alipay.com/tsx12849bgl0ikyxzl84jed" class="donate-btn" aria-label="立即捐赠支持数字图书馆建设">立即捐赠</a>
+    </main>
 
     <footer>
         <p>© <span id="year"></span> 冰书公益 | 版权所有</p>
     </footer>
 
     <script>
-        // 自动更新版权年份
         document.getElementById("year").textContent = new Date().getFullYear();
     </script>
 
