--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
   
     <meta charset="UTF-8">
     <title>        </title>
-    <meta http-equiv="refresh" content="0;url=https://bingbook.cn/gongyi">
+    <meta http-equiv="refresh" content="0;url=https://gongyi.bingbook.cn">
 </head>
 <body>
 
