--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
         <div class="qr-code">
             <p>扫描二维码捐赠支持数字图书馆建设：</p>
-            <img src="https://bingbook.cn/img/Alipay.jpg" alt="捐赠二维码">
+            <img src="https://bingbook.cn/img/fukuan.png" alt="捐赠二维码">
         </div>
 
         <a href="https://qr.alipay.com/tsx12849bgl0ikyxzl84jed" class="donate-btn" aria-label="立即捐赠支持数字图书馆建设">立即捐赠</a>
