--- a/index.html
+++ b/index.html
@@ -329,13 +329,13 @@
 
             <div class="qr-grid">
                 <div class="qr-item">
-                    <!-- 请替换图片 src -->
-                    <img src="https://via.placeholder.com/200x200?text=WeChat" alt="微信">
+                    <!-- 微信支付图片 src -->
+                    <img src="/wxpay.png" alt="微信">
                     <p>微信支付</p>
                 </div>
                 <div class="qr-item">
-                    <!-- 请替换图片 src -->
-                    <img src="https://via.placeholder.com/200x200?text=Alipay" alt="支付宝">
+                    <!-- 支付宝图片图片 src -->
+                    <img src="/Alipay.jpg" alt="支付宝">
                     <p>支付宝</p>
                 </div>
             </div>
