Update card images to use background-image style

--- a/index.html
+++ b/index.html
@@ -291,21 +291,21 @@
 
         <div class="myth-grid">
             <div class="myth-card">
-                <div class="card-img" style="/tyh.png"></div>
+                <div class="card-img" style="background-image: url(/tyh.png)"></div>
                 <div class="card-txt">
                     <h3>天岩户隐</h3>
                     <p>因弟弟须佐之男的暴行，天照躲入洞窟，世界陷入无尽黑暗。众神在洞外载歌载舞，终使其探身而出，光辉重返人间。</p>
                 </div>
             </div>
             <div class="myth-card">
-                <div class="card-img" style="/ssq.png"></div>
+                <div class="card-img" style="background-image: url(/ssq.png)"></div>
                 <div class="card-txt">
                     <h3>三神器</h3>
                     <p>象征皇权的至宝：八咫镜（智慧）、八尺琼勾玉（慈悲）与天丛云剑（勇气），由天照大神赐予下界统治者。</p>
                 </div>
             </div>
             <div class="myth-card">
-                <div class="card-img" style="/yssg.png"></div>
+                <div class="card-img" style="background-image: url(/yssg.png)"></div>
                 <div class="card-txt">
                     <h3>伊势神宫</h3>
                     <p>位于三重县，是供奉天照大御神的最高圣域。每二十年举行一次“式年迁宫”，象征生命与建筑的永恒轮回。</p>
