--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 </div>
                 <div class="qr-item">
                     <!-- 支付宝支付图片 -->
-                    <img src="alipay.jpg" alt="支付宝">
+                    <img src="Alipay.jpg" alt="支付宝">
                     <p>支付宝</p>
                 </div>
             </div>
